implemented search functionalities + added all posts visualization